#PK-1675 Cleanup and Error handling

--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
@@ -30,7 +30,7 @@
         {
             @foreach (var notification in Notifications)
             {
-                <TableRow Class="@RowClass(notification)">
+                <TableRow Class="@("notification-row " + (notification.IsRead ? "read" : "unread"))">
                     <TableRowCell Style="width: 100px;">
                         <NotificationTypeColumn Notification="notification" />
                     </TableRowCell>
