#PK-1675 Orders notification implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/Inbox.razor
@@ -15,7 +15,7 @@
               OnMarkAllRead="MarkAllReadAsync">
 </InboxActions>
 
-<Table Responsive>
+<Table Responsive Class="notification-table">
     <TableHeader>
         <TableRow>
             <TableHeaderCell>@L["Type"]</TableHeaderCell>
