#PK-1675 Order message notification

--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/NotificationTypeColumn.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/NotificationTypeColumn.razor
@@ -17,6 +17,7 @@
         Refund => "fa-dollar",
         Return or Exchange => "fa-refresh",
         Payment => "fa-coins",
+        OrderMessage => "fa-comment",
         _ => "fa-circle"
     };
 
@@ -27,6 +28,7 @@
         Refund => "red",
         Return or Exchange => "orange",
         Payment => "gold",
+        OrderMessage => "cyan",
         _ => string.Empty
     };
 }
