#PK-1675 Localization and Tenant connection handling

--- a/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/InboxStats.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InboxManagement/InboxStats.razor
@@ -10,7 +10,7 @@
             </div>
             <div class="stats-info">
                 <h3>@Model.Orders</h3>
-                <p class="m-0">@(L["OrderMessages"])</p>
+                <p class="m-0">@(L["Notification:Orders"])</p>
             </div>
         </div>
         <div class="stats-card">
@@ -19,7 +19,7 @@
             </div>
             <div class="stats-info">
                 <h3>@Model.BankTransfers</h3>
-                <p class="m-0">@(L["BankTransfers"])</p>
+                <p class="m-0">@(L["PaymentVerification"])</p>
             </div>
         </div>
         <div class="stats-card">
